Closed
Bug 135850
Opened 23 years ago
Closed 23 years ago
JOHAB converter : Hangul compatibility Jamo mapping is wrong
Categories
(Core :: Internationalization, defect)
Core
Internationalization
Tracking
()
VERIFIED
FIXED
People
(Reporter: jshin1987, Assigned: jshin1987)
References
()
Details
(Keywords: intl, Whiteboard: done)
Attachments
(3 files, 1 obsolete file)
|
7.72 KB,
text/plain
|
tetsuroy
:
review+
alecf
:
superreview+
asa
:
approval+
|
Details |
|
3.38 KB,
text/plain
|
tetsuroy
:
review+
alecf
:
superreview+
asa
:
approval+
|
Details |
|
6.67 KB,
patch
|
alecf
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
The mapping of Hangul compatibility Jamo (at U+3130) has to be
treated separately from the rest of symbols in KS X 1001 for the Johab
converter. In the table on p.33 of KS C 5601-1992, you'll
find row 4 is different from row 2 and row6.
EUC-KR code points JOHAB code points
row 4: A4D4-A4FE DAD4-DAFE
Cmpare row 4 with adjacent rows (e.g. row 2, row 6) and you'll
find the pattern.
row 2: A2A1-A2FE D9A1-DAFE
row 6: A6A1-A6FE DBA1-DBFE
Hangul Jamos are excluded in row 4 because they have to be encoded
using '5-bit patterns' with Hangul filers.
I'm sorry I forgot to mention this when Johab converter was implemented.
As I told about this Ken Lunde a few years ago and asked him to
change Adobe's Cmap table for JOHAB (he also mentions it in
p. 181 of his CJKV I.P.) I believe CMap table in
Solaris for Johab gets this right. That means, Hangul compatibility
Jamos are rendered 'empty' if ksc5601.1992-3(Johab) fonts
are selected.
Anyway, I'll make a quick patch (though not tonight :-) ) ...
| Assignee | ||
Updated•23 years ago
|
Summary: JOHAB converter : Hangul compatibility Jamo mapping is wrong → JOHAB converter : Hangul compatibility Jamo mapping is wrong
| Assignee | ||
Comment 2•23 years ago
|
||
| Assignee | ||
Comment 3•23 years ago
|
||
to use with attachment 78165 [details] [diff] [review]
| Assignee | ||
Comment 4•23 years ago
|
||
to use with attachment 78165 [details] [diff] [review]
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•23 years ago
|
||
I put up a web page to reveal this bug at
http://jshin.net/moztest/compat_jamo.html
Unless Linux box is configured to have ksc5601.1992-3 fonts
(the easiest way to do is to use Adobe CID fonts)
this bug wouldn't manifest on Linux. Solaris has to be used
to reproduce this bug.
| Assignee | ||
Comment 6•23 years ago
|
||
> As I told about this Ken Lunde a few years ago and asked him to
> change Adobe's Cmap table for JOHAB (he also mentions it in
> p. 181 of his CJKV I.P.) I believe CMap table in
> Solaris for Johab gets this right.
According to Brian Yuan @ Sun (who added himself to CC), Sun
shipped CMap files obtained from Adobe without any change. Therefore,
what I wrote above is confirmed and this bug clearly affects Solaris.
| Assignee | ||
Comment 7•23 years ago
|
||
Frank and Roy,
Could you review my patch?
Without this patch, under Solaris(and Linux and other Unix/X11
platforms) Hangul Jamos wouldn't be rendered
correctly if ksc5601.1992-3 fonts are used.
Whiteboard: done,waiting for review
Comment 8•23 years ago
|
||
Comment on attachment 78165 [details] [diff] [review]
a patch
/r=yokoyama
Attachment #78165 -
Flags: review+
Comment 9•23 years ago
|
||
Comment on attachment 78166 [details]
Johab Jamo to Unicode mapping table
/r=yokoyama
Attachment #78166 -
Flags: review+
Comment 10•23 years ago
|
||
Comment on attachment 78167 [details]
Unicode to Johab Jamo mapping table
/r=yokoyama
Attachment #78167 -
Flags: review+
Comment 11•23 years ago
|
||
Comment on attachment 78165 [details] [diff] [review]
a patch
sr=alecf
Attachment #78165 -
Flags: superreview+
Comment 12•23 years ago
|
||
maintenance on this first patch would be easier if you made better use of sizeof():
-: nsMultiTableDecoderSupport(4,
+: nsMultiTableDecoderSupport(5,
this could be
+: nsMultiTableDecoderSupport(sizeof(g_JOHABRanges) / sizeof(g_JOHABRanges[0]),
which will calculate the correct size at compile-time.
same thing for nsMultiTableEncoderSupport, appearing twice later in the patch.
Comment 13•23 years ago
|
||
Comment on attachment 78166 [details]
Johab Jamo to Unicode mapping table
sr=alecf
Attachment #78166 -
Flags: superreview+
Comment 14•23 years ago
|
||
Comment on attachment 78167 [details]
Unicode to Johab Jamo mapping table
sr=alecf
Attachment #78167 -
Flags: superreview+
| Assignee | ||
Comment 15•23 years ago
|
||
I'm going to ask for approval of drivers@mozilla.
Attachment #78165 -
Attachment is obsolete: true
Comment 16•23 years ago
|
||
Comment on attachment 91119 [details] [diff] [review]
a new patch incorporating alecf's comment
sr=alecf
Attachment #91119 -
Flags: superreview+
Comment 17•23 years ago
|
||
Comment on attachment 78166 [details]
Johab Jamo to Unicode mapping table
a=asa (on behalf of drivers) for checkin to the 1.1 trunk.
Attachment #78166 -
Flags: approval+
Comment 18•23 years ago
|
||
Comment on attachment 78167 [details]
Unicode to Johab Jamo mapping table
a=asa (on behalf of drivers) for checkin to the 1.1 trunk.
Attachment #78167 -
Flags: approval+
Updated•23 years ago
|
Attachment #91119 -
Flags: approval+
Comment 19•23 years ago
|
||
Comment on attachment 91119 [details] [diff] [review]
a new patch incorporating alecf's comment
a=asa (on behalf of drivers) for checkin to the 1.1 trunk.
| Assignee | ||
Comment 20•23 years ago
|
||
checked in to the trunk.
thank you for all.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: done,waiting for review → done
Comment 21•23 years ago
|
||
Jungshik Shin, could you create the test case for this, so I can verify this.
You need to log in
before you can comment on or make changes to this bug.
Description
•