bug 135850 - Make Korean JOHAB encoder (Compatibility Jamo part) aligned with Adobe CMap and XFree86 font encoding file for JOHAB. r=yokoyama,sr=alecf,a=asa