intl/uconv/ucvko/nsUCvKODll.h
@@ -46,5 +46,6 @@ extern "C" PRUint16 g_ufKSC5601Mapping[];
 #define g_AsciiMapping ucvko_g_AsciiMapping
 extern "C" PRUint16 g_AsciiMapping[];
 extern "C" PRUint16 g_HangulNullMapping[];
+extern "C" PRUint16 g_ufJohabJamoMapping[];
 
 #endif /* nsUCvKODll_h___ */
