intl/uconv/ucvko/nsUnicodeToJohab.cpp
@@ -19,7 +19,7 @@
  * Portions created by the Initial Developer are Copyright (C) 1998
  * the Initial Developer. All Rights Reserved.
  *
- * Contributor(s):
+ * Contributor(s): Jungshik Shin <jshin@mailaps.org>
  *
  *
  * Alternatively, the contents of this file may be used under the terms of
@@ -56,16 +56,22 @@ static const PRUint16 gJohabHangulShiftTable[] =  {
   0, uJohabHangulCharset,  
   ShiftCell(0,   0, 0, 0, 0, 0, 0, 0),
 };
+static const PRUint16 gJohabHangulCompatJamoShiftTable[] =  {
+  0, u2BytesCharset,
+  ShiftCell(0,   0, 0, 0, 0, 0, 0, 0),
+};
 
-static const PRUint16 *g_JohabMappingTable[3] = {
+static const PRUint16 *g_JohabMappingTable[4] = {
   g_AsciiMapping,
   g_HangulNullMapping,
+  g_ufJohabJamoMapping,
   g_ufKSC5601Mapping
 };
 
-static const PRUint16 *g_JohabShiftTable[3] =  {
+static const PRUint16 *g_JohabShiftTable[4] =  {
   gAsciiShiftTable,
   gJohabHangulShiftTable,
+  gJohabHangulCompatJamoShiftTable,
   gJohabSymbolShiftTable
 };
 
@@ -73,7 +79,7 @@ static const PRUint16 *g_JohabShiftTable[3] =  {
 // Class nsUnicodeToJohab [implementation]
 
 nsUnicodeToJohab::nsUnicodeToJohab() 
-: nsMultiTableEncoderSupport(3,
+: nsMultiTableEncoderSupport(sizeof(g_JohabShiftTable) / sizeof(g_JohabShiftTable[0]),
                         (uShiftTable**) g_JohabShiftTable, 
                         (uMappingTable**) g_JohabMappingTable)
 {
